--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>En1mes | Aprende</title>
+	<title>En1mes | b4</title>
 
 	<link rel="stylesheet" href="http://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
 	<script type="text/javascript" src="js/jquery-3.3.1.js"></script>
@@ -47,17 +47,40 @@
 	<h1>aprende a hacer pagina web</h1>
 	<h2>En el cap de hoy vamos a ver getbootstrap</h2>
 	</div>
-	<div class="jumbotron" style="background-color: #ED987E">
-		<h3>Aprende Ya</h3>
+	<div class="jumbotron" style="background-color: #ED987E; margin-top: 50px; margin-bottom: 50px">
+		<div class="container">
+			<h3>Aprende Ya</h3>
+		</div>
 	</div>
-	<div class="container">
-		<div class="row">
-  <div class="col-md-6 col-sm-6 col-xs-12" style="background-color: blue">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo soluta, voluptas fugiat consequuntur velit magnam corporis accusantium harum natus iusto facilis, esse similique, atque reprehenderit et ducimus possimus rem magni.</div>
-  <div class="col-md-3 col-sm-3 col-xs-6" style="background-color: yellow">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam, suscipit nihil libero sed ipsum dolorum quos ratione doloribus natus nam explicabo, adipisci sint repudiandae eveniet, vitae cupiditate eius temporibus delectus!</div>
-  <div class="col-md-3 col-sm-3 col-xs-6" style="background-color: pink">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam, suscipit nihil libero sed ipsum dolorum quos ratione doloribus natus nam explicabo, adipisci sint repudiandae eveniet, vitae cupiditate eius temporibus delectus!</div>
-</div>
 
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eum eos necessitatibus sed! Nam similique beatae ab quisquam voluptatibus voluptatem quo molestias commodi numquam expedita, laborum autem accusamus voluptates dolor, enim.
+	<div class="container">
+
+		Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis nihil optio, officia aperiam possimus tempore voluptas placeat est, itaque, ea tenetur suscipit exercitationem minima consectetur ducimus quis, labore nostrum consequuntur!
+		<div class="row">
+			<!--Primera columna -->
+  		<div class="col-md-4 col-md-offset-4" style="background-color: pink; padding-top: 20px; margin-top: 100px">
+  			<div class="img-thumbnail">
+			<img src="cookyjk.jpg" class="img-fluid">
+			<p class="glyphicon glyphicon-font">
+			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga, animi assumenda natus nihil impedit sapiente at suscipit laudantium facilis possimus neque eum, eligendi labore tempore consequuntur officiis a debitis! Voluptatibus?
+			</p>
+			</div>
+		</div>
+			<!--Segunda columna -->
+  		<div class="col-md-4 col-md-offset-4" style="background-color: pink; padding-top: 20px; margin-top: 100px">
+  			<div class="img-thumbnail">
+			<img src="cookyjk.jpg" class="img-fluid">
+			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga, animi assumenda natus nihil impedit sapiente at suscipit laudantium facilis possimus neque eum, eligendi labore tempore consequuntur officiis a debitis! Voluptatibus?
+			</div>
+		</div>
+			<!--Tercera columna -->
+  		<div class="col-md-4 col-md-offset-4" style="background-color: pink; padding-top: 20px; margin-top: 100px">
+  			<div class="img-thumbnail">
+			<img src="cookyjk.jpg" class="img-fluid">
+			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga, animi assumenda natus nihil impedit sapiente at suscipit laudantium facilis possimus neque eum, eligendi labore tempore consequuntur officiis a debitis! Voluptatibus?
+			</div>
+		</div>
+  		</div>
 	</div>
 
 </body>
