--- a/index.html
+++ b/index.html
@@ -5,12 +5,15 @@
 	<title>En1mes | b4</title>
 
 	<link rel="stylesheet" href="http://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
+
+	<link rel="stylesheet" href="sandstone.css">
 	<script type="text/javascript" src="js/jquery-3.3.1.js"></script>
 	<script src="http://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
 
 </head>
-<body>
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<body style="padding: 70px">
+
+<nav class="navbar navbar-inverse navbar-fixed-top">
   <a class="navbar-brand" href="#">Navbar</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -47,7 +50,13 @@
 	<h1>aprende a hacer pagina web</h1>
 	<h2>En el cap de hoy vamos a ver getbootstrap</h2>
 	</div>
+
+	
 	<div class="jumbotron" style="background-color: #ED987E; margin-top: 50px; margin-bottom: 50px">
+		<!-- 16:9 aspect ratio -->
+<div class="embed-responsive embed-responsive-16by9">
+  <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/i0p1bmr0EmE"></iframe>
+</div>
 		<div class="container">
 			<h3>Aprende Ya</h3>
 		</div>
@@ -82,6 +91,16 @@
 		</div>
   		</div>
 	</div>
-
+<!-- 16:9 aspect ratio -->
+<div class="container">
+	<div class="row">	
+		<div class="col-md-6 col-sm-6">
+			<h2>contacto</h2></div>
+		<div class="col-md-6 col-sm-6">
+		<div class="embed-responsive embed-responsive-16by9">
+		  <iframe class="embed-responsive-item" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d347.2705293596509!2d-70.7599188258376!3d-33.45883194909878!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9662c3ab9317cb21%3A0x9cb0d821f2947947!2sCapilla+Santa+Teresa+de+los+Andes!5e1!3m2!1ses!2scl!4v1523896078660"></iframe></div>
+</div>
+</div>
+</div>
 </body>
 </html>
